@@ -1,58 +1,73 @@
 package com.demo.application.computersystem;
 
+import com.demo.application.department.DepartmentRepository;
+import com.demo.domain.computersystem.ComputerSystem;
 import com.demo.domain.computersystem.ComputerSystemDto;
 import com.demo.domain.computersystem.ComputerSystemMapper;
+import com.demo.domain.department.Department;
 import com.demo.domain.user.User;
 import com.demo.application.user.UserRepository;
 import com.demo.shared.exception.DuplicateResourceException;
 import com.demo.shared.exception.ResourceNotFoundException;
-import com.demo.domain.computersystem.ComputerSystem;
+import com.demo.shared.security.CurrentUserService;
+import com.demo.shared.security.FieldProjectionService;
+import com.demo.shared.security.GrantService;
+import com.demo.shared.security.ScopeResult;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class ComputerSystemServiceTest {
 
     @Mock
     private ComputerSystemRepository repository;
-
     @Mock
     private UserRepository userRepository;
+    @Mock
+    private DepartmentRepository departmentRepository;
+    @Mock
+    private CurrentUserService currentUserService;
+    @Mock
+    private GrantService grantService;
+    @Mock
+    private FieldProjectionService fieldProjectionService;
 
     private ComputerSystemMapper mapper;
-
     private ComputerSystemService service;
 
     private ComputerSystem testComputerSystem;
     private ComputerSystemDto testDto;
     private User testUser;
+    private Department testDepartment;
 
     @BeforeEach
     void setUp() throws Exception {
         Class<?> implClass = Class.forName(ComputerSystemMapper.class.getName() + "Impl");
         mapper = (ComputerSystemMapper) implClass.getDeclaredConstructor().newInstance();
-        service = new ComputerSystemService(repository, userRepository, mapper);
+        service = new ComputerSystemService(repository, userRepository, departmentRepository, mapper,
+                currentUserService, grantService, fieldProjectionService);
 
-        testUser = User.builder()
-                .id(1L)
-                .username("john.doe")
-                .email("john.doe@example.com")
-                .department("IT")
-                .build();
+        testDepartment = Department.builder().id(1L).name("IT").build();
+        testUser = User.builder().id(1L).username("john.doe").email("john.doe@example.com").build();
 
         testComputerSystem = ComputerSystem.builder()
                 .id(1L)
@@ -60,7 +75,7 @@ class ComputerSystemServiceTest {
                 .manufacturer("Dell")
                 .model("PowerEdge R750")
                 .systemUser(testUser)
-                .department("IT")
+                .departments(Set.of(testDepartment))
                 .macAddress("00:1A:2B:3C:4D:5E")
                 .ipAddress("192.168.1.100")
                 .networkName("PROD-NETWORK")
@@ -72,11 +87,21 @@ class ComputerSystemServiceTest {
                 .manufacturer("Dell")
                 .model("PowerEdge R750")
                 .userId(1L)
-                .department("IT")
+                .departmentIds(Set.of(1L))
                 .macAddress("00:1A:2B:3C:4D:5E")
                 .ipAddress("192.168.1.100")
                 .networkName("PROD-NETWORK")
                 .build();
+
+        // Default authorization: full access; field projection is a pass-through.
+        when(currentUserService.requireCurrentUser()).thenReturn(testUser);
+        when(grantService.canAccess(any(), any(), eq("ComputerSystem"), any())).thenReturn(true);
+        when(grantService.resolveScope(any(), eq("ComputerSystem"), any()))
+                .thenReturn(new ScopeResult(true, false, Set.of()));
+        when(departmentRepository.findAllById(any())).thenReturn(List.of(testDepartment));
+        when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+        when(fieldProjectionService.filterReadable(any(), any(), any(), any()))
+                .thenAnswer(inv -> inv.getArgument(2));
     }
 
     @Test
@@ -84,14 +109,12 @@ class ComputerSystemServiceTest {
         when(repository.findByHostname(testDto.getHostname())).thenReturn(Optional.empty());
         when(repository.findByMacAddress(testDto.getMacAddress())).thenReturn(Optional.empty());
         when(repository.findByIpAddress(testDto.getIpAddress())).thenReturn(Optional.empty());
-        when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
         when(repository.save(any(ComputerSystem.class))).thenReturn(testComputerSystem);
 
         ComputerSystemDto result = service.createComputerSystem(testDto);
 
         assertNotNull(result);
         assertEquals(testDto.getHostname(), result.getHostname());
-        assertEquals(testDto.getManufacturer(), result.getManufacturer());
         verify(repository, times(1)).save(any(ComputerSystem.class));
     }
 
@@ -99,10 +122,7 @@ class ComputerSystemServiceTest {
     void testCreateComputerSystem_DuplicateHostname() {
         when(repository.findByHostname(testDto.getHostname())).thenReturn(Optional.of(testComputerSystem));
 
-        assertThrows(DuplicateResourceException.class, () -> {
-            service.createComputerSystem(testDto);
-        });
-
+        assertThrows(DuplicateResourceException.class, () -> service.createComputerSystem(testDto));
         verify(repository, never()).save(any(ComputerSystem.class));
     }
 
@@ -121,17 +141,14 @@ class ComputerSystemServiceTest {
     void testGetComputerSystemById_NotFound() {
         when(repository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThrows(ResourceNotFoundException.class, () -> {
-            service.getComputerSystemById(99L);
-        });
+        assertThrows(ResourceNotFoundException.class, () -> service.getComputerSystemById(99L));
     }
 
     @Test
     void testGetAllComputerSystems() {
         Pageable pageable = PageRequest.of(0, 10);
-        Page<ComputerSystem> page = new PageImpl<>(Arrays.asList(testComputerSystem), pageable, 1);
-
-        when(repository.findAll(pageable)).thenReturn(page);
+        Page<ComputerSystem> page = new PageImpl<>(List.of(testComputerSystem), pageable, 1);
+        when(repository.findAll(ArgumentMatchersSpec(), eq(pageable))).thenReturn(page);
 
         Page<ComputerSystemDto> result = service.getAllComputerSystems(pageable);
 
@@ -143,7 +160,6 @@ class ComputerSystemServiceTest {
     @Test
     void testUpdateComputerSystem_Success() {
         when(repository.findById(1L)).thenReturn(Optional.of(testComputerSystem));
-        when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
         when(repository.save(any(ComputerSystem.class))).thenReturn(testComputerSystem);
 
         ComputerSystemDto result = service.updateComputerSystem(1L, testDto);
@@ -155,8 +171,7 @@ class ComputerSystemServiceTest {
 
     @Test
     void testDeleteComputerSystem_Success() {
-        when(repository.existsById(1L)).thenReturn(true);
-        doNothing().when(repository).deleteById(1L);
+        when(repository.findById(1L)).thenReturn(Optional.of(testComputerSystem));
 
         service.deleteComputerSystem(1L);
 
@@ -165,12 +180,9 @@ class ComputerSystemServiceTest {
 
     @Test
     void testDeleteComputerSystem_NotFound() {
-        when(repository.existsById(99L)).thenReturn(false);
+        when(repository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThrows(ResourceNotFoundException.class, () -> {
-            service.deleteComputerSystem(99L);
-        });
-
+        assertThrows(ResourceNotFoundException.class, () -> service.deleteComputerSystem(99L));
         verify(repository, never()).deleteById(any());
     }
 
@@ -188,8 +200,11 @@ class ComputerSystemServiceTest {
     void testGetComputerSystemByHostname_NotFound() {
         when(repository.findByHostname("NONEXISTENT")).thenReturn(Optional.empty());
 
-        assertThrows(ResourceNotFoundException.class, () -> {
-            service.getComputerSystemByHostname("NONEXISTENT");
-        });
+        assertThrows(ResourceNotFoundException.class, () -> service.getComputerSystemByHostname("NONEXISTENT"));
+    }
+
+    @SuppressWarnings("unchecked")
+    private static Specification<ComputerSystem> ArgumentMatchersSpec() {
+        return any(Specification.class);
     }
 }
